@@ -1,3 +1,6 @@
+19-Jan-2004 by Wolfgang Koller
+-Fixed WinnerMesgView and RankView so that they now display the correct colors
+
 18-Jan-2004 by Wolfgang Koller
 -Changed the ServerBrowser so that it now really supports the query-timeout
 -It's now possible to scroll with the arrow key of your keyboard
